Add relationship analysis tool and algorithm documentation
- Add analyze_relationships.py: Advanced relationship strength and recent intimacy analysis with adaptive decay mechanism
- Add ALGORITHM_DESIGN.md: Detailed algorithm design philosophy and mathematical formulas
- Update README.md: Add usage examples and feature descriptions for relationship analysis
- Update .gitignore: Allow tracking of RELATIONSHIP_ANALYSIS files

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,10 @@
 # 允许 .gitignore 自己被跟踪
 !.gitignore
 
+# 关系分析工具和文档
+!RELATIONSHIP_ANALYSIS/
+!RELATIONSHIP_ANALYSIS/analyze_relationships.py
+!RELATIONSHIP_ANALYSIS/ALGORITHM_DESIGN.md
+
 # 部署时需要的 Cloudflare Analytics 配置（不提交）
 cloudflare-analytics.html
